# qdt

./: .clang-format  .gitignore  .gitmodules  .ocamlformat  FSWatch.lean  IncrementalWF2.lean  Lsp.lean  Main.lean  Qdt.lean  README.md  Std.qdt  dune-project  flake.nix  justfile  lake-manifest.json  lakefile.lean  lakefile.toml  proposal.md  qdt.opam  test.qdt
test/: dune  runner.ml  test_code.ml  test_nbe.ml  tests.ml
test/inductive/inductive/: accept_acc.qdt  accept_basic.qdt  accept_eq3.qdt  accept_indexed.qdt  accept_mltt.qdt  accept_nested.qdt  accept_params.qdt  accept_recursor.qdt  accept_unit_eta.qdt  reject_index_missing.expected  reject_index_missing_return.expected  reject_index_missing_return.qdt  reject_nested_def.expected  reject_nested_def.qdt  reject_param_mismatch.expected  reject_param_mismatch.qdt  reject_param_mismatch_arg.expected  reject_param_mismatch_arg.qdt  reject_param_missing.expected  reject_param_missing.qdt  reject_positivity_contra.qdt  reject_positivity_direct.expected  reject_positivity_direct.qdt  reject_positivity_nested.qdt  reject_return.expected  reject_return.qdt  reject_return_type.expected  reject_return_type.qdt  reject_type_mismatch.expected  reject_type_mismatch.qdt
test/inductive/structure/: accept_basic.qdt  accept_eta.qdt  accept_nested.qdt  accept_params.qdt  accept_recursive.qdt  reject_missing_param.expected  reject_missing_param.qdt  reject_param_mismatch.expected  reject_param_mismatch.qdt  reject_positivity_contra.expected  reject_positivity_contra.qdt  (+3 more)
test/parser/: accept_associativity.qdt  accept_precedence.qdt
(+547 files in other folders)
